--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,25 +4,25 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo 'Building..'
-                mvn clean
+                echo 'Building the code..'
+                bat "mvn clean"
             }
         }
         stage('Test') {
             steps {
-                echo 'Testing..'
-                mvn test
+                echo 'Testing the code..'
+                bat "mvn test"
             }
         }
         stage('Compile') {
             steps {
-                echo 'Compiling....'
-                mvn compile
+                echo 'Compiling the code....'
+                bat "mvn compile"
             }
         }
         stage('Deploy') {
             steps {
-                echo 'Deploying....'
+                echo 'Deploying the code....'
             }
         }
     }
